--- a/JSIntro/index.html
+++ b/JSIntro/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <div style="margin-top:30px">All data comes from json-server.</div>
     <script src="index.js"></script>
 </body>
 </html>
